# CppUTest

docker/: Dockerfile  docker-compose.yaml
workspace/autoGen/: add.h
workspace/src/: main.c  main.h  mock.c  mock.h  sub.h
workspace/tests/: CMakeLists.txt  makefile  run_all_test.sh  test_add.cpp  test_mock.cpp  test_sub.cpp
